<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity2">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:rotation="4"
                android:rotationX="0"
                android:rotationY="-20"
                android:background="@drawable/logo"
                android:layout_marginBottom="20dp">

            </ImageView>


            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/alatsi"
                android:text="@string/guide1"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_1"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/alatsi"
                android:text="@string/guide2"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_2"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/alatsi"
                android:text="@string/guide3"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>


            <FrameLayout
                android:id="@+id/adsnative"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                >
            </FrameLayout>

            <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_3"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/alatsi"
                android:text="@string/guide4"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_4"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/alatsi"
                android:text="@string/guide5"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_5"
                android:layout_marginTop="10dp"
                android:background="@drawable/red_button"
                android:fontFamily="@font/alatsi"
                android:text="@string/guide6"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <FrameLayout
                android:id="@+id/Nativeads"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">
            </FrameLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>