<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".Splach">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/logo"
            app:civ_border_color="@android:color/transparent"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="20.00dp"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="100"
            android:minHeight="10.00dp"
            android:minWidth="240.00dp"
            android:indeterminate="false"
            android:progressTint="@color/black"
            android:progressBackgroundTint="@color/purple_200"
            android:progress="1" />


        <TextView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8.00dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/splash_loading"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8.00dp"
            android:textColor="@color/black"
            android:text="@string/splash_info"
            android:textSize="6.00dp" />

    </LinearLayout>

</RelativeLayout>