<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".AppFutur">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/logo"
        android:visibility="gone">

    </ImageView>

    <androidx.cardview.widget.CardView
        android:id="@+id/endapp"
        android:layout_width="match_parent"
        android:layout_below="@+id/logo"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="visible">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:background="@color/ad_mob_button_blue"
            android:paddingRight="20dp" >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:src="@drawable/roket"
                android:layout_gravity="center"
                >
            </ImageView>




            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"

                >


                <TextView
                    android:id="@+id/appfutur_Text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:freezesText="false"
                    android:gravity="left"
                    android:fontFamily="@font/acme"
                    android:text="@string/App_futur1"
                    android:textSize="25dp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/appfutur_Text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/appfutur_Text3"
                    android:fontFamily="@font/acme"
                    android:textStyle="bold"
                    android:textColor="#F34F54"
                    android:textSize="15dp">

                </TextView>

            </LinearLayout>
            <TextView
                android:id="@+id/appfutur_Text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="center"
                android:fontFamily="@font/acme"
                android:text="@string/App_futur2"
                android:textSize="20dp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:orientation="vertical"

                >

                <Button
                    android:id="@+id/close"
                    android:background="@drawable/red_button"
                    android:textSize="17dp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Close"
                    android:textColor="@color/white"

                    >

                </Button>

                <Button
                    android:id="@+id/getapp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/red_button"
                    android:text="Get App"
                    android:textColor="@color/white"
                    android:textSize="17dp">

                </Button>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>